...
class IndexViewController: UITableViewController {

    let dataSource = TableViewDataSource(identifier: "indexCell")

    override func awakeFromNib() {
        super.awakeFromNib()
        let photo = Information(title:"Photo Samples", identifier:"photoIndex", intro:"Sample Programs for Photos Framework")
        let ipVideo = Information(title:"Video by Image Picker Samples", identifier:"imagePickerVideo", intro:"Sample Programs for Image Picker")
        let avfoundation = Information(title:"Video by AVFoundation", identifier:"avFoundationVideo", intro:"Sample Programs for AVFoundation")

        dataSource.items = [photo, ipVideo, avfoundation]
    }

...
